2011-12-15  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* configure.ac: Post-release version suffix added.

2011-11-01  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* NEWS, configure.ac:
	  === Version 0.1.3 ===

2011-11-01  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* configure.ac:
	  - Remove checks for unused ttf tools.

2011-11-01  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* Makefile.am:
	  - Add dist-ctan targets.

2011-10-31  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* latex/fonts-arundina.sty, latex/ltharunsans.fd,
	  latex/ltharunmono.fd, latex/ltharunserif.fd:
	  - Add licensing header.

2011-10-31  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* arundina/ArundinaSansMono*.sfd:
	  - Remove old fi, fl ligatures and add non-ligated ff, fi, fl, ffi,
	    ffl glyphs to avoid ligature effects on monospace font in TeX.
	  - No 'liga' rule is added.
	  - Clear old hint tables and re-apply AutoHint, AutoInstr to all
	    glyphs.

2011-10-30  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* arundina/ArundinaSerif*.sfd:
	  - Add ff, ffi, ffl glyphs, with 'liga' rules.
	  - Clear old hint tables and re-apply AutoHint, AutoInstr to all
	    glyphs.

2011-10-30  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* arundina/ArundinaSans*.sfd:
	  - Add ff, ffi, ffl glyphs, with 'liga' rules.
	  - Clear old hint tables and re-apply AutoHint, AutoInstr to all
	    glyphs.

2011-10-30  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* scripts/gen-pfb.pe:
	  - Round to int before adding extremas, to fix some almost-horizontal
	    or almost-vertical points.

2011-10-30  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* scripts/gen-pfb.pe:
	  - Add spline simplification.

2011-10-29  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* arundina/Makefile.am:
	  - Use make substitutions in variables instead of shell + sed.

2011-10-29  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	Remove rarely-used PFA generation
